/***********************************************************************
X3 ChangeLog

2009-08-11  Neil Spierling  <sirvulcan@sirvulcan.co.nz>

	* Srvx sync. Author: Michael Poole.

	* configure.in: (HAVE_SOCKADDR_SA_LEN): Define to a non-empty value
	(specifically, 1).
	(HAVE_STRUCT_ADDRINFO): Likewise.

	* src/ioset-kevent.c (ioset_kevent_add): Never try to use EV_DELETE, because
	that can make kevent() return -1/ENOENT.
	(ioset_kevent_update): We need to try to EV_DELETE here instead.
	(ioset_kevent_loop): Do not bail if kevent() just returns -1/EINTR.

	* src/Makefile.am (EXTRA_x3_SOURCES): Include mod-blacklist.c.

	* src/sar.c (ipv4_pton): Set the sockaddr length field when it exists.
	(ipv6_pton): Likewise.

2009-08-11  Matthew Beeching  <jobe@mdbnet.co.uk>

	* src/proto-common.c: Fix to allow trigger (in channel) commands
	to work in unregistered channels

2009-07-30  Matthew Beeching  <jobe@mdbnet.co.uk>

	* src/sar.c: Fix for typo in previous commit

2009-07-30  Neil Spierling  <sirvulcan@sirvulcan.co.nz>

	* src/sar.c: Commented out an warning message.

2009-07-29  Matthew Beeching  <jobe@mdbnet.co.uk>

	* src/nickserv.c: Fix for minor auth bug

2009-07-23  Matthew Beeching  <jobe@mdbnet.co.uk>

	* src/nickserv.help: Minor spelling correction

2009-07-18  Matthew Beeching  <jobe@mdbnet.co.uk>

	* src/nickserv.c: Fix for NickServ AUTH bug with only password
	being supplied

2009-07-16  Matthew Beeching  <jobe@mdbnet.co.uk>

	* src/nickserv.c: Added support for NickServ with LDAP enabled

2009-07-15  Neil Spierling  <sirvulcan@sirvulcan.co.nz>

	* src/chanserv.c: Crash fix with the spin command for hosts with
	a long length.

2009-07-05  Matthew Beeching  <jobe@mdbnet.co.uk>

	* src/chanserv.c: Fix for crash on ChanServ.UNSUSPEND

2009-06-27  Matthew Beeching  <jobe@mdbnet.co.uk>

	* src/modcmd.c: Fix for bug #2813183

2009-06-20  Neil Spierling  <sirvulcan@sirvulcan.co.nz>

	* src/chanserv.c: Removed lastmod from gline and shun. (from the
	srvx merge)
